core/iox_v1_query_api/src/response/snapshots/iox_v1_query_api__response__stream__tests__many_batches_single_series_multi_chunk_eq.snap
---
source: iox_v1_query_api/src/response/stream.rs
expression: chunks
---
- name: m1
  tags:
    tag0: a
    tag1: "1"
  columns:
    - time
    - val
  values:
    - - "1970-01-01T00:00:01Z"
      - 1
    - - "1970-01-01T00:00:02Z"
      - 2
    - - "1970-01-01T00:00:03Z"
      - 3
  partial: true
- name: m1
  tags:
    tag0: a
    tag1: "1"
  columns:
    - time
    - val
  values:
    - - "1970-01-01T00:00:04Z"
      - 4
    - - "1970-01-01T00:00:05Z"
      - 5
    - - "1970-01-01T00:00:06Z"
      - 6
  partial: true
- name: m1
  tags:
    tag0: a
    tag1: "1"
  columns:
    - time
    - val
  values:
    - - "1970-01-01T00:00:07Z"
      - 7
    - - "1970-01-01T00:00:08Z"
      - 8
    - - "1970-01-01T00:00:09Z"
      - 9
  partial: true
- name: m1
  tags:
    tag0: a
    tag1: "1"
  columns:
    - time
    - val
  values:
    - - "1970-01-01T00:00:10Z"
      - 10
